--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tadashi/svelte-editor-quill": "^3.0.1",
+		"redis": "^4.7.0",
+		"svelte-mathquill": "0.8.2"
+	}
 }
