--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "consensus",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -14,17 +15,11 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/redis": "^4.0.11",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
-	},
-	"type": "module",
-	"dependencies": {
+		"vite": "^5.0.3",
 		"@auth/sveltekit": "^1.4.2",
-		"@tadashi/svelte-editor-quill": "^3.0.1",
-		"redis": "^4.7.0",
-		"svelte-mathquill": "0.8.2"
+		"ioredis": "^5.4.1"
 	}
 }
